--- a/RampEngine/RampEngine.vcxproj.filters
+++ b/RampEngine/RampEngine.vcxproj.filters
@@ -1,39 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Ramp">
+      <UniqueIdentifier>{B5B18B7C-A1E8-8C0D-4AD5-721036EB080F}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Ramp\Events">
+      <UniqueIdentifier>{F9BF5BEC-6575-D4E1-EE69-CEB85A1ECBE5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Ramp.h" />
     <ClInclude Include="src\Ramp\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Ramp</Filter>
     </ClInclude>
     <ClInclude Include="src\Ramp\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Ramp.h">
-      <Filter>Header Files</Filter>
+      <Filter>Ramp</Filter>
     </ClInclude>
     <ClInclude Include="src\Ramp\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Ramp</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ramp\Events\ApplicationEvent.h">
+      <Filter>Ramp\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ramp\Events\Event.h">
+      <Filter>Ramp\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ramp\Events\KeyEvent.h">
+      <Filter>Ramp\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ramp\Events\MouseEvent.h">
+      <Filter>Ramp\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ramp\Log.h">
+      <Filter>Ramp</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Ramp\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Ramp</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="cpp.hint" />
+    <ClCompile Include="src\Ramp\Log.cpp">
+      <Filter>Ramp</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
