--- a/RampEngine/RampEngine.vcxproj
+++ b/RampEngine/RampEngine.vcxproj
@@ -55,31 +55,32 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\bin\Debug-windows-\RampEngine\</OutDir>
-    <IntDir>..\bin-int\Debug-windows-\RampEngine\</IntDir>
+    <OutDir>..\bin\Debug-windows-x86_64\RampEngine\</OutDir>
+    <IntDir>..\bin-int\Debug-windows-x86_64\RampEngine\</IntDir>
     <TargetName>RampEngine</TargetName>
     <TargetExt>.dll</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>..\bin\Release-windows-\RampEngine\</OutDir>
-    <IntDir>..\bin-int\Release-windows-\RampEngine\</IntDir>
+    <OutDir>..\bin\Release-windows-x86_64\RampEngine\</OutDir>
+    <IntDir>..\bin-int\Release-windows-x86_64\RampEngine\</IntDir>
     <TargetName>RampEngine</TargetName>
     <TargetExt>.dll</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>..\bin\Dist-windows-\RampEngine\</OutDir>
-    <IntDir>..\bin-int\Dist-windows-\RampEngine\</IntDir>
+    <OutDir>..\bin\Dist-windows-x86_64\RampEngine\</OutDir>
+    <IntDir>..\bin-int\Dist-windows-x86_64\RampEngine\</IntDir>
     <TargetName>RampEngine</TargetName>
     <TargetExt>.dll</TargetExt>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>rmppch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>RMP_PLATFORM_WINDOWS;RMP_BUILD_DLL;RMP_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>RMP_PLATFORM_WINDOWS;RMP_BUILD_DLL;RMP_ENABLE_ASSERTS;RMP_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -88,18 +89,20 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ImportLibrary>..\bin\Debug-windows-\RampEngine\RampEngine.lib</ImportLibrary>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ImportLibrary>..\bin\Debug-windows-x86_64\RampEngine\RampEngine.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>IF EXIST ..\bin\Debug-windows-\RampEngine\RampEngine.dll\ (xcopy /Q /E /Y /I ..\bin\Debug-windows-\RampEngine\RampEngine.dll ..\bin\Debug-windows-\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Debug-windows-\RampEngine\RampEngine.dll ..\bin\Debug-windows-\Sandbox &gt; nul)</Command>
+      <Command>IF EXIST ..\bin\Debug-windows-x86_64\RampEngine\RampEngine.dll\ (xcopy /Q /E /Y /I ..\bin\Debug-windows-x86_64\RampEngine\RampEngine.dll ..\bin\Debug-windows-x86_64\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Debug-windows-x86_64\RampEngine\RampEngine.dll ..\bin\Debug-windows-x86_64\Sandbox &gt; nul)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>rmppch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>RMP_PLATFORM_WINDOWS;RMP_BUILD_DLL;RMP_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>RMP_PLATFORM_WINDOWS;RMP_BUILD_DLL;RMP_ENABLE_ASSERTS;RMP_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -112,18 +115,20 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <ImportLibrary>..\bin\Release-windows-\RampEngine\RampEngine.lib</ImportLibrary>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ImportLibrary>..\bin\Release-windows-x86_64\RampEngine\RampEngine.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>IF EXIST ..\bin\Release-windows-\RampEngine\RampEngine.dll\ (xcopy /Q /E /Y /I ..\bin\Release-windows-\RampEngine\RampEngine.dll ..\bin\Release-windows-\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Release-windows-\RampEngine\RampEngine.dll ..\bin\Release-windows-\Sandbox &gt; nul)</Command>
+      <Command>IF EXIST ..\bin\Release-windows-x86_64\RampEngine\RampEngine.dll\ (xcopy /Q /E /Y /I ..\bin\Release-windows-x86_64\RampEngine\RampEngine.dll ..\bin\Release-windows-x86_64\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Release-windows-x86_64\RampEngine\RampEngine.dll ..\bin\Release-windows-x86_64\Sandbox &gt; nul)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'">
     <ClCompile>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>rmppch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>RMP_PLATFORM_WINDOWS;RMP_BUILD_DLL;RMP_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>RMP_PLATFORM_WINDOWS;RMP_BUILD_DLL;RMP_ENABLE_ASSERTS;RMP_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -136,13 +141,15 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <ImportLibrary>..\bin\Dist-windows-\RampEngine\RampEngine.lib</ImportLibrary>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ImportLibrary>..\bin\Dist-windows-x86_64\RampEngine\RampEngine.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>IF EXIST ..\bin\Dist-windows-\RampEngine\RampEngine.dll\ (xcopy /Q /E /Y /I ..\bin\Dist-windows-\RampEngine\RampEngine.dll ..\bin\Dist-windows-\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Dist-windows-\RampEngine\RampEngine.dll ..\bin\Dist-windows-\Sandbox &gt; nul)</Command>
+      <Command>IF EXIST ..\bin\Dist-windows-x86_64\RampEngine\RampEngine.dll\ (xcopy /Q /E /Y /I ..\bin\Dist-windows-x86_64\RampEngine\RampEngine.dll ..\bin\Dist-windows-x86_64\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I ..\bin\Dist-windows-x86_64\RampEngine\RampEngine.dll ..\bin\Dist-windows-x86_64\Sandbox &gt; nul)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\Ramp.h" />
     <ClInclude Include="src\Ramp\Application.h" />
     <ClInclude Include="src\Ramp\Core.h" />
@@ -152,10 +159,21 @@
     <ClInclude Include="src\Ramp\Events\KeyEvent.h" />
     <ClInclude Include="src\Ramp\Events\MouseEvent.h" />
     <ClInclude Include="src\Ramp\Log.h" />
+    <ClInclude Include="src\Ramp\Window.h" />
+    <ClInclude Include="src\rmppch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\Ramp\Application.cpp" />
     <ClCompile Include="src\Ramp\Log.cpp" />
+    <ClCompile Include="src\rmppch.cpp">
+      <PrecompiledHeader>Create</PrecompiledHeader>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
+      <Project>{154B857C-0182-860D-AA6E-6C109684020F}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
