--- a/RampEngine/RampEngine.vcxproj.filters
+++ b/RampEngine/RampEngine.vcxproj.filters
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Ramp">
       <UniqueIdentifier>{B5B18B7C-A1E8-8C0D-4AD5-721036EB080F}</UniqueIdentifier>
     </Filter>
@@ -9,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\Ramp.h" />
     <ClInclude Include="src\Ramp\Application.h">
       <Filter>Ramp</Filter>
@@ -34,13 +43,21 @@
     <ClInclude Include="src\Ramp\Log.h">
       <Filter>Ramp</Filter>
     </ClInclude>
+    <ClInclude Include="src\Ramp\Window.h">
+      <Filter>Ramp</Filter>
+    </ClInclude>
+    <ClInclude Include="src\rmppch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\Ramp\Application.cpp">
       <Filter>Ramp</Filter>
     </ClCompile>
     <ClCompile Include="src\Ramp\Log.cpp">
       <Filter>Ramp</Filter>
     </ClCompile>
+    <ClCompile Include="src\rmppch.cpp" />
   </ItemGroup>
 </Project>
