Input Polling System
Input can be get from function. From now on there is no need to wait event

--- a/RampEngine/RampEngine.vcxproj.filters
+++ b/RampEngine/RampEngine.vcxproj.filters
@@ -65,6 +65,8 @@
       <Filter>Ramp</Filter>
     </ClInclude>
     <ClInclude Include="src\rmppch.h" />
+    <ClInclude Include="src\Ramp\input.h" />
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\Opengl\ImGuiOpenGLRenderer.cpp">
@@ -89,5 +91,6 @@
       <Filter>Ramp</Filter>
     </ClCompile>
     <ClCompile Include="src\rmppch.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
   </ItemGroup>
 </Project>
