GLM added & Renamed Log fn
glm added to project for later use. Also RMP_DEBUG renamed to RMP_LOG because RMP_DEBUG is also defined for identify development platform

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "RampEngine/vendor/imgui"]
 	path = RampEngine/vendor/imgui
 	url = https://github.com/TheCherno/imgui
+[submodule "RampEngine/vendor/glm"]
+	path = RampEngine/vendor/glm
+	url = https://github.com/g-truc/glm/
